@@ -1,3 +1,9 @@
+2007-01-03  Per Bothner  <per@bothner.com>
+
+	* LambdaExp.java (allocChildMethods): For non-static ClassExp do
+	setOuterLink here, so we can call constructor before class is compiled.
+	* ClassExp.java (compile): Don't setOuterLink here any more.
+
 2007-01-02  Per Bothner  <per@bothner.com>
 
 	* PrimProcedure.java (apply): Special handling for "clone" of array.
